static/style.css
h1.single-title {
    color: var(--color-text);
    font-size: 40px;
}

.subtitle {
    font-style: italic;
    color: var(--color-text-secondary);
    margin-top: 0;
}

ul.pages-list {
    list-style: none;
    padding: 0;
}

li.page-item {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    background-image: radial-gradient(
        circle,
        var(--color-text-secondary) 1px,
        transparent 1px
    );
    background-size: 8px 1em;
    background-position: 0 bottom;
    background-repeat: repeat-x;
}

.page-link {
    background: var(--color-article);
    padding-right: 4px;
}

.page-date {
    font-style: italic;
    color: var(--color-text-secondary);
    background: var(--color-article);
    padding-left: 4px;
}

main.single > article {
    margin-bottom: 0;
}
p.license {
    font-style: italic;
    color: var(--color-text-secondary);
    font-size: var(--font-size-md);
    margin-bottom: var(--article-margin-vertical);
    margin-left: var(--spacing-sm);
    max-width: 80%;
}

